Homework_wr/log/build_2024-04-21_22-06-54/turtlesim_cleaner/stderr.log
  File "/home/ionut/UNI/Year_3/AI_Python/Project/Homework_wr/install/turtlesim_cleaner/lib/python3.11/site-packages/turtlesim_cleaner/Move_node.py", line 4
    from geometry msgs.msg import Twist
                  ^^^^
SyntaxError: invalid syntax

